  27 August 2018
Added ':' and '_' as valid start characters in XML (and html) names.

  17 May 2018
Fixed uninstantiated-pointer error in vap$ function. (When given en empty
string as input.)

   6 February 2018
New function vap that does with strings what map does with lists.
vap can deconstruct a string character-wise or split it at every
separator. The separator, if defined, can be any string. vap knows
about UTF-8.

   5 October 2017
Avoid unnecessary memory (de)allocation in solution made yesterday.

   4 October 2017
Pattern functions that return ? on success can be negated. 

  22 August 2017
Tested #define'd options and made minor fixes to make bracmat.c compile with
every option turned on and off.

  11 August 2017
lex.bra: ignore anonymous functions in the list of undeclared functions. 

   1 August 2017
In xml.c: much extended list of HTML entities. Corrected typo in the
predefined function MLencoding that determines the encoding of an XML or HTML
file.

  28 July 2017
Uses UnicodeData.txt 2017-04-14, 05:40:18 GMT, no change of behaviour.

  21 June 2017
Added a built-in map function. Usage: map$(<fnc>.<space separated list>)

  19 May 2017
More 'localisation' of source code to English

  10 May 2017
'localised' source code to English, so you no longer need some knowledge of
Dutch and Danish to understand the code.
Moved two declarations to start of block (this is still C!)

   7 February 2017
Added LT4DH/2016 paper. Updated README.md.

  22 December 2016 - Version 6.209
Uses UnicodeData.txt 16-May-2016 19:23
Removed change log from bracmat.c

   5 October 2016
Fixed error that made sim$(abbcd.abcd) equal to 10/9 instead of 8/9

  23 September 2016
json.c: fixed reading strings with characters with 8th bit set. 

  31 August 2016
Made the FENCE flag ` the first flag to be printed.

   5 August 2016
fpo -> global_fpo in myputc

   12 July 2016
lst: Only list variable on top of stack if RAW option set.

   6 May 2016